[gd_scene load_steps=34 format=3 uid="uid://dtotj42xmc77w"]

[ext_resource type="Material" uid="uid://dwl2yxa1jrbeb" path="res://sky.tres" id="1_0chrf"]
[ext_resource type="Script" path="res://scripts/day_cycle.gd" id="1_1dg4y"]
[ext_resource type="PackedScene" uid="uid://k6sv2dlrlx17" path="res://prefabs/player.tscn" id="3_hmtm2"]
[ext_resource type="PackedScene" uid="uid://c54tnoy7ux1gb" path="res://prefabs/hoverbike.tscn" id="4_6e4ac"]
[ext_resource type="PackedScene" uid="uid://cv2f1apue1xaw" path="res://env/scatters/tree_scatter.tscn" id="10_8ssl6"]
[ext_resource type="Script" path="res://scripts/audio_loop.gd" id="10_8xlbf"]
[ext_resource type="Script" path="res://addons/proton_scatter/src/stack/modifier_stack.gd" id="11_osea3"]
[ext_resource type="Script" path="res://addons/proton_scatter/src/modifiers/create_inside_random.gd" id="12_pgdq4"]
[ext_resource type="Script" path="res://addons/proton_scatter/src/modifiers/randomize_transforms.gd" id="13_cfgj7"]
[ext_resource type="AudioStream" uid="uid://bdc2gmb8foh3g" path="res://sound/ambience/Ambiance_Night_Loop_Stereo.wav" id="14_kd2dl"]
[ext_resource type="Script" path="res://addons/proton_scatter/src/modifiers/relax.gd" id="14_s2op0"]
[ext_resource type="Script" path="res://addons/proton_scatter/src/modifiers/project_on_geometry.gd" id="15_qtbma"]
[ext_resource type="Script" path="res://addons/proton_scatter/src/shapes/path_shape.gd" id="16_es0f7"]
[ext_resource type="PackedScene" uid="uid://nxw1cppink00" path="res://env/prefabs/water_plane.tscn" id="22_5ai8v"]
[ext_resource type="PackedScene" uid="uid://d1cpfkd18veq8" path="res://env/map_main.tscn" id="22_pcqb1"]
[ext_resource type="PackedScene" uid="uid://cdcf8vxqjasss" path="res://env/prefabs/temple_1.tscn" id="24_a5nj0"]
[ext_resource type="Script" path="res://scripts/player_hud.gd" id="28_e4ey4"]

[sub_resource type="Sky" id="Sky_j185m"]
sky_material = ExtResource("1_0chrf")

[sub_resource type="Environment" id="Environment_lc2bm"]
background_mode = 2
background_color = Color(0.714761, 0.819219, 0.880671, 1)
sky = SubResource("Sky_j185m")
ambient_light_source = 3
reflected_light_source = 1
tonemap_mode = 3
ssao_enabled = true
ssil_enabled = true
ssil_intensity = 1.5
glow_enabled = true
fog_enabled = true
fog_density = 0.0002
fog_aerial_perspective = 0.591
volumetric_fog_density = 0.0075
volumetric_fog_albedo = Color(0.907942, 0.907942, 0.907942, 1)

[sub_resource type="PlaneMesh" id="PlaneMesh_txu83"]
size = Vector2(100, 100)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_lr83v"]
data = PackedVector3Array(50, 0, 50, -50, 0, 50, 50, 0, -50, -50, 0, 50, -50, 0, -50, 50, 0, -50)

[sub_resource type="BoxShape3D" id="BoxShape3D_p77tt"]
size = Vector3(151.641, 25.0979, 105.888)

[sub_resource type="Resource" id="Resource_qorct"]
script = ExtResource("12_pgdq4")
amount = 4000
enabled = true
override_global_seed = false
custom_seed = 0
restrict_height = true
reference_frame = 1

[sub_resource type="Resource" id="Resource_khj7x"]
script = ExtResource("13_cfgj7")
position = Vector3(0.15, 0.15, 0.15)
rotation = Vector3(0, 360, 0)
scale = Vector3(2, 2, 2)
enabled = true
override_global_seed = false
custom_seed = 0
restrict_height = false
reference_frame = 2

[sub_resource type="Resource" id="Resource_twitp"]
script = ExtResource("14_s2op0")
iterations = 3
offset_step = 0.2
consecutive_step_multiplier = 0.75
use_computeshader = true
enabled = true
override_global_seed = false
custom_seed = 0
restrict_height = true
reference_frame = 0

[sub_resource type="Resource" id="Resource_x4ytp"]
script = ExtResource("15_qtbma")
ray_direction = Vector3(0, -1, 0)
ray_length = 50.0
ray_offset = 5.0
remove_points_on_miss = true
align_with_collision_normal = false
max_slope = 90.0
collision_mask = 1
exclude_mask = 24
enabled = true
override_global_seed = false
custom_seed = 0
restrict_height = false
reference_frame = 0

[sub_resource type="Resource" id="Resource_py77b"]
script = ExtResource("11_osea3")
stack = Array[Resource("res://addons/proton_scatter/src/modifiers/base_modifier.gd")]([SubResource("Resource_qorct"), SubResource("Resource_khj7x"), SubResource("Resource_twitp"), SubResource("Resource_x4ytp")])

[sub_resource type="Curve3D" id="Curve3D_goitn"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, 288.529, 0, -349.256, 0, 0, 0, 0, 0, 0, 196.979, 0, -361.662, 0, 0, 0, 0, 0, 0, 102.825, 0, -431.39, 0, 0, 0, 0, 0, 0, 54.5474, 0, -359.935, 0, 0, 0, 0, 0, 0, -4.23584, 0, -392.219, 0, 0, 0, 0, 0, 0, -58.2739, 0, -319.607, 0, 0, 0, 0, 0, 0, -142.337, 0, -379.511, 0, 0, 0, 0, 0, 0, -243.061, 0, -398.347, 0, 0, 0, 0, 0, 0, -347.632, 3.05176e-05, -339.356, 0, 0, 0, 0, 0, 0, -534.435, 0, -260.023, 0, 0, 0, 0, 0, 0, -743.485, 3.05176e-05, -123.733, 0, 0, 0, 0, 0, 0, -726.68, -3.05176e-05, 3.90076, 0, 0, 0, 0, 0, 0, -543.957, -3.05176e-05, 39.9835, 0, 0, 0, 0, 0, 0, -379.443, -3.05176e-05, 159.389, 0, 0, 0, 0, 0, 0, -264.903, -3.05176e-05, 249.748, 0, 0, 0, 0, 0, 0, -184.455, -3.05176e-05, 313.052, 0, 0, 0, 0, 0, 0, -104.315, -3.05176e-05, 259.911, 0, 0, 0, 0, 0, 0, -52.3853, -3.05176e-05, 241.814, 0, 0, 0, 0, 0, 0, 14.8325, -3.05176e-05, 107.692, 0, 0, 0, 0, 0, 0, 229.88, -3.05176e-05, 25.0156, 0, 0, 0, 0, 0, 0, 394.081, -3.05176e-05, -212.355, 0, 0, 0, 0, 0, 0, 372.961, 0, -282.602, 0, 0, 0, 0, 0, 0, 330.83, 0, -301.684),
"tilts": PackedFloat32Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0)
}
point_count = 23

[sub_resource type="Resource" id="Resource_8lg75"]
script = ExtResource("16_es0f7")
closed = true
thickness = 0.0
curve = SubResource("Curve3D_goitn")

[sub_resource type="Gradient" id="Gradient_o8iqi"]
colors = PackedColorArray(0, 0, 0, 0, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_3rghg"]
gradient = SubResource("Gradient_o8iqi")
width = 1

[sub_resource type="GradientTexture1D" id="GradientTexture1D_xl4ch"]
gradient = SubResource("Gradient_o8iqi")
width = 1

[sub_resource type="GradientTexture1D" id="GradientTexture1D_dmhwf"]
gradient = SubResource("Gradient_o8iqi")
width = 1

[node name="map" type="Node3D"]

[node name="day_cycle" type="Node3D" parent="."]
script = ExtResource("1_1dg4y")

[node name="env" type="WorldEnvironment" parent="day_cycle"]
environment = SubResource("Environment_lc2bm")

[node name="sun" type="DirectionalLight3D" parent="day_cycle"]
transform = Transform3D(-3.25619e-08, 0.667144, -0.744929, 2.91618e-08, 0.744929, 0.667144, 1, 5.32907e-15, -4.37114e-08, 0, 1442.74, 0)
shadow_enabled = true
sky_mode = 2

[node name="moon" type="DirectionalLight3D" parent="day_cycle"]
transform = Transform3D(0.937081, 0.0260703, -0.348137, 0.11341, 0.920392, 0.374189, 0.330178, -0.390128, 0.859525, 0, 2884.03, -64.7931)
shadow_enabled = true
sky_mode = 2

[node name="player" parent="." instance=ExtResource("3_hmtm2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4857.46, 320.925, 1309.16)

[node name="hoverbike" parent="." instance=ExtResource("4_6e4ac")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5047.26, 633.556, 778.173)

[node name="amb_night" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("14_kd2dl")
panning_strength = 0.0
script = ExtResource("10_8xlbf")
looping = false

[node name="ground" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -7.91399, 0)
visible = false
mesh = SubResource("PlaneMesh_txu83")

[node name="static" type="StaticBody3D" parent="ground"]

[node name="col" type="CollisionShape3D" parent="ground/static"]
shape = SubResource("ConcavePolygonShape3D_lr83v")

[node name="water_plane" parent="." instance=ExtResource("22_5ai8v")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 30.8489, 0)

[node name="map_main" parent="." instance=ExtResource("22_pcqb1")]
transform = Transform3D(1000, 0, 0, 0, 1000, 0, 0, 0, 1000, 0, 0, 0)

[node name="sectors" type="Node3D" parent="."]

[node name="5" type="Node3D" parent="sectors"]
transform = Transform3D(-0.359175, 0, 0.600827, 0, 0.7, 0, -0.600827, 0, -0.359175, -4922.74, 290.791, 1245.32)

[node name="clearing" type="StaticBody3D" parent="sectors/5"]
transform = Transform3D(0.798246, 0, 0.60233, 0, 1, 0, -0.60233, 0, 0.798246, 13.5688, 31.0294, -315.862)
collision_layer = 16

[node name="col" type="CollisionShape3D" parent="sectors/5/clearing"]
transform = Transform3D(1, 0, 0, 0, 0.999973, 0, 0, 0, 1, 0, 0, 0)
shape = SubResource("BoxShape3D_p77tt")

[node name="tree_scatter" parent="sectors/5" instance=ExtResource("10_8ssl6")]
transform = Transform3D(-0.733011, 0, -1.22618, 0, 1.42857, 0, 1.22618, 0, -0.733011, -216.182, 36.7497, 22.5557)
keep_static_colliders = true
modifier_stack = SubResource("Resource_py77b")

[node name="ScatterShape" parent="sectors/5/tree_scatter" index="3"]
shape = SubResource("Resource_8lg75")

[node name="temple_1" parent="sectors/5" instance=ExtResource("24_a5nj0")]
transform = Transform3D(0.614559, 0, -0.788869, 0, 1, 0, 0.788869, 0, 0.614559, -22.3945, 40.3639, -288.787)

[node name="ui" type="CanvasLayer" parent="."]

[node name="hud" type="Control" parent="ui"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("28_e4ey4")

[node name="status" type="Control" parent="ui/hud"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 7.0
offset_top = -66.0
offset_right = 135.0
offset_bottom = -7.0
grow_vertical = 0
mouse_filter = 1

[node name="hp_bar" type="HSlider" parent="ui/hud/status"]
self_modulate = Color(0.811765, 0, 0.14902, 1)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -22.0
offset_bottom = -14.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/center_grabber = 0
theme_override_icons/grabber = SubResource("GradientTexture1D_3rghg")
theme_override_icons/grabber_highlight = SubResource("GradientTexture1D_xl4ch")
theme_override_icons/grabber_disabled = SubResource("GradientTexture1D_dmhwf")
value = 50.0
editable = false
scrollable = false

[node name="stamina_bar" type="HSlider" parent="ui/hud/status"]
self_modulate = Color(0.172549, 0.74902, 0.909804, 1)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -33.0
offset_bottom = -25.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/center_grabber = 0
theme_override_icons/grabber = SubResource("GradientTexture1D_3rghg")
theme_override_icons/grabber_highlight = SubResource("GradientTexture1D_xl4ch")
theme_override_icons/grabber_disabled = SubResource("GradientTexture1D_dmhwf")
value = 50.0
editable = false
scrollable = false

[node name="mana_bar" type="HSlider" parent="ui/hud/status"]
self_modulate = Color(0.431373, 0.203922, 1, 1)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -11.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/center_grabber = 0
theme_override_icons/grabber = SubResource("GradientTexture1D_3rghg")
theme_override_icons/grabber_highlight = SubResource("GradientTexture1D_xl4ch")
theme_override_icons/grabber_disabled = SubResource("GradientTexture1D_dmhwf")
value = 50.0
editable = false
scrollable = false

[connection signal="finished" from="amb_night" to="amb_night" method="_on_finished"]

[editable path="sectors/5/tree_scatter"]
